--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,11 +2,15 @@
 <head>
     <title>FCFB - {{ title }}</title>
 
-    <!-- Bootstrap -->
+    <!-- Remove below when tab icon is established-->
+    <link rel="shortcut icon" href="#">
+
+    <!-- Bootstrap 
     <link href="{{ url_for('static', filename='stylesheets/bootstrap.min.css') }}" rel='stylesheet' type='text/css' integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous"/>
 
-    <!-- Custom CSS -->
+    -- Custom CSS --
     <link href="{{ url_for('static', filename='stylesheets/style.css') }}" rel='stylesheet' type='text/css' />
+    -->
 
     <meta name="description" content="Fake College Football Scoreboard">
     <meta name="keywords" content="FCFB,Fake,College,Football,FBS">
@@ -14,14 +18,20 @@
 </head>
 
 <nav class="navbar navbar-static-top navbar-dark bg-inverse">
-    <a class="navbar-brand" href="/">fcfbscoreboard</a>
+    <a class="navbar-brand" href="/">FCFB Scoreboard</a>
     <nav class="nav navbar-nav float-xs-left">
         <a class="nav-item nav-link" href="/AAC">AAC</a>
         <a class="nav-item nav-link" href="/ACC">ACC</a>
+        <a class="nav-item nav-link" href="/B1G">B1G</a>
+        <a class="nav-item nav-link" href="/BigXII">Big XII</a>
+        <a class="nav-item nav-link" href="/CUSA">C-USA</a>
+        <a class="nav-item nav-link" href="/MAC">MAC</a>
+        <a class="nav-item nav-link" href="/MWC">MWC</a>
+        <a class="nav-item nav-link" href="/PAC12">PAC-12</a>
+        <a class="nav-item nav-link" href="/SEC">SEC</a>
+        <a class="nav-item nav-link" href="/SunBelt">Sun Belt</a>
+        <a class="nav-item nav-link" href="/Independent">Independent</a>
     </nav>
-    <form action="/search" method="POST" class="float-xs-right">
-        <input type="text" name="searchname" class="form-control" placeholder="Search Player or Team...">
-    </form>
 </nav><!-- /.navbar -->
 
 
@@ -31,8 +41,3 @@
 
 
 
-
-<!-- Bootstrap core JavaScript -->
-<script src="{{ url_for('static', filename='javascripts/jquery-3.2.1.slim.min.js') }}"></script>
-<script src="{{ url_for('static', filename='javascripts/popper.min.js') }}"></script>
-<script src="{{ url_for('static', filename='javascripts/bootstrap.min.js') }}"></script>
