--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,34 @@
 {% extends "layout.html" %}
+{% block body %}
+<body>
+    <br></br> 
+
+    <div class="container">
+        <h3>{{ date_now }}</h3>
+        <div class="row">
+            <div class="col-lg-5">
+                <div class="list_group">
+                    {% for game in games %}
+                        <a class="list-group-item list-group-item-action" href="{{ game['URL'] }}">
+                            <div class="row">
+                                <div class="col-xs-4">
+                                    {{ game['Home'] }} {{ game['Home Score'] }} 
+                                    <br>
+                                    {{ game['Away'] }} {{ game['Away Score'] }}
+                                    <br>
+                                    {{ game['Down'] }} | {{ game['Yard Line'] }} | {{ game['Quarter'] }} {{ game['Time'] }}
+                                    <br>
+                                    <br>
+                                </div>
+                            </div>
+                        </a>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</body>
+
+{% endblock %}
